Use media queries to correct alignment issues with the navbar dropdown menu and the hungary-card's card-body on smaller viewport widths.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,8 +342,21 @@ footer{
     color: #41bda4;
 }
 
+/*-------------------------Media Queries*/
 @media only screen and (max-width: 768px) {
     #about-us{
         height: 100%;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .card-body {
+        width: auto;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .navbar-brand {
+        font-size: 12px;
     }
 }
